# Project_Omega

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.bat  cmake_install.cmake  kpt.py  linker.ld  run.bat
bootloader/: booltoader.asm
bootloader/Stage2/: 64_32mod.asm
bootloader/include/: disk.asm  kpt.asm
bootloader/include/Scnd/: CPUID.asm  Memory.asm  gdt.asm
bootloader/kernel_entry/: 64_32mod.asm
kernel/: Makefile  kentry.cpp  kprint.cpp  string.cpp
kernel/IDT/: IDT.cpp
kernel/IDT/Keyboard/: Keyboard.cpp
kernel/MEM/: Heap.cpp  Memory.cpp  MemoryMap.cpp
kernel/cpu/: cpuid.cpp
kernel/drivers/: serial.cpp
kernel/include/: heap.h  kprint.h  memory.h  typedef.h
kernel/include/cpu/: cpuid.h
kernel/include/drivers/: serial.h
kernel/include/ports/: 8259.h  IO.cpp
pys/: build_all.py  build_iso.py  kpt.py
src/bootloader/: bootloader.asm
src/bootloader/include/: kpt.asm  print.asm
src/bootloader/include/Scnd/: 64mod.asm  CPUID.asm  Memory.asm  idt.asm
src/bootloader/kernel_entry/: 64_32mod.asm
src/kernel/: IO.cpp  kentry.cpp  kprint.cpp  string.cpp
src/kernel/IDT/: IDT.cpp
src/kernel/IDT/Keyboard/: KBScanCode.cpp  Keyboard.cpp
src/kernel/MEM/: Heap.cpp  Memory.cpp  MemoryMap.cpp
src/kernel/cpu/: 8259.cpp  cpuid.cpp
src/kernel/drivers/: cmos.cpp  pit.cpp  serial.cpp
src/kernel/drivers/fs/: disks.cpp  floppy.cpp
src/kernel/include/: kprint.h  string.h  typedef.h
src/kernel/include/cpu/: cpuid.h  msr.h
src/kernel/include/drivers/: cmos.h  pit.h  rtc.h  serial.h
src/kernel/include/drivers/fs/: disks.h  floppy.h
src/kernel/include/ports/: 8259.h  IO.h  idt.h
src/kernel/include/ports/Keyboard/: keyboard.h
src/kernel/include/ports/Memory/: heap.h  memory.h  memory_map.h
src/kernel/include/ports/idt/: idt.h
syslibs/include/: omath.h
syslibs/math/: build.bat  omath.cpp
